crates/analyzer/tests/snapshots/errors__ctx_builtins_param_incorrect_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: incorrect type for argument to `Barn.create`
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:11:46
   │
11 │         let created_barn: Barn = Barn.create(address(26), 0)
   │                                              ^^^^^^^^^^^ this has type `address`; expected `Context`

error: missing argument label
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:12:27
   │
12 │         emit WorldMessage(42, message: "hello world")
   │                           ^ add `ctx:` here
   │
   = Note: this label is optional if the argument is a variable named `ctx`.

error: incorrect type for `WorldMessage` argument `ctx`
   ┌─ compile_errors/ctx_builtins_param_incorrect_type.fe:12:27
   │
12 │         emit WorldMessage(42, message: "hello world")
   │                           ^^ this has type `u256`; expected type `Context`


